# LoggingLib

./: .gitignore  CMakeLists.txt  CTestTestfile.cmake  LoggingLib.cpp  Makefile  cmake_install.cmake  main.cpp
include/: #LoggingLib.hpp#  .#LoggingLib.hpp  LoggingLib.hpp  LoggingLib.hpp~
src/: LoggingLib.cpp  LoggingLib.cpp~  main.cpp~
